--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 /*=============== VARIABLES CSS ===============*/
 :root {
-  /*========== Colors ==========*/
-  /*Color mode HSL(hue, saturation, lightness)*/
+  /*========== Couleurs ==========*/
+  /*Utiliser mode HSL(hue, saturation, lightness)*/
   /*
-      Blue: hsl(207, 90%, 61%)
-      Purple: hsl(250, 66%, 75%)
-      Pink: hsl(356, 66%, 75%)
-      Teal: hsl(174, 63%, 62%)
+      Bleu: hsl(207, 90%, 61%)
+      Violet: hsl(250, 66%, 75%)
+      Rose: hsl(356, 66%, 75%)
+      Menthe: hsl(174, 63%, 62%)
   */
 
   --hue: 356;
@@ -23,7 +23,7 @@
   --body-color: hsl(var(--hue), 100%, 99%);
   --container-color: #fff;
 
-  /*========== Font and typography ==========*/
+  /*========== Polices et typo ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
   --body-font: 'Montserrat', sans-serif;
   --h2-font-size: 1.25rem;
@@ -55,7 +55,7 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  transition: .3s; /* For animation dark mode */
+  transition: .3s; 
 }
 
 h1, h2, h3 {
@@ -76,19 +76,8 @@ img {
   height: auto;
 }
 
-/*=============== THEME ===============*/
 
-
-/*========== Variables Dark theme ==========*/
-
-
-/*========== 
-    Color changes in some parts of 
-    the website, in light theme
-==========*/
-
-
-/*=============== REUSABLE CSS CLASSES ===============*/
+/*=============== CSS CLASSES ===============*/
 .container {
   max-width: 968px;
   margin-left: 1.5rem;
@@ -101,7 +90,7 @@ img {
 }
 
 
-/*=============== PROFILE ===============*/
+/*=============== PROFIL ===============*/
 .profile{
   position: relative;
   padding-top: 3.5rem;
@@ -199,7 +188,7 @@ img {
   justify-content: center;
 }
 
-.profile__buttons{ /*espace entre bouton cv et les deux autres*/
+.profile__buttons{ /*espace entre bouton cv et les deux autres, supprimé dans la nouvelle version */
   column-gap: 1rem;
 }
 
@@ -261,7 +250,7 @@ img {
 }
 
 
-/*=============== PROJECTS ===============*/
+/*=============== PROJETS ===============*/
 .projects__card{
   position: relative;
   border-radius: 1rem;
@@ -383,11 +372,10 @@ img {
   color: var(--text-color-light);
 }
 
-/*=============== SCROLL BAR ===============*/
 
+/*=============== RESPONSIVE ===============*/
 
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
+/* SMALL */
 @media screen and (max-width: 320px){
   .container{
     margin-left: 1rem;
@@ -408,7 +396,7 @@ img {
   }
 }
 
-/* For medium devices */
+/* MEDIUM */
 @media screen and (min-width: 700px){
   .projects__content{
     grid-template-columns: 450px;
@@ -432,7 +420,7 @@ img {
   }
 }
 
-/* For large devices */
+/* LARGE */
 @media screen and (min-width: 1000px){
   .container{
     margin-left: auto;
